# tango-virus

./: Cargo.toml  README.md  build-static.sh
src/: assign.rs  crispr.rs  crispr_match.rs  fetch.rs  filter.rs  get_lineage.rs  join_virus_taxonomy.rs  main.rs  ppin.rs  preprocess.rs  preprocess_blastout.rs  preprocess_taxonomy.rs  preprocessed_taxonomy.rs  refine_vpf_class.rs  tango2010.rs  tango_assign.rs  taxonomy.rs  tool.rs  util.rs
src/crispr/: minced_spacers.rs
src/crispr_match/: minced_spacers.rs
src/fetch/: ncbi_taxonomy.rs  string_viruses.rs  uniprot.rs
src/ppin/: find_uniprot_viral_proteins.rs  prepare_uniprot_blastdb.rs  prodigal_uniprot_pipeline.rs  string_viruses.rs  uniprot_xml_parser.rs
src/refine_vpf_class/: enrichment.rs  summary.rs
src/taxonomy/: generic.rs  mod.rs  util.rs
src/taxonomy/formats/: mod.rs  ncbi.rs  newick.rs
src/taxonomy/formats/ncbi/: dmp.rs  names.rs
src/tool/: blast.rs  vpf_class.rs
src/tool/blast/: blastout.rs
src/tool/vpf_class/: record.rs
src/util/: blastout.rs  cli_tools.rs  csv_flatten_fix.rs  csv_stream.rs  filter.rs  interned_mapping.rs  progress_monitor.rs  vpf_class_record.rs
test-data/: lineages.tre  reads.match
