[package]
name = "meteor"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "~3.2.8", features = ["derive"] }
crossbeam = "0.8"
csv = "1.1"
extended-rational = "1.3"
itertools = "0.10"
newick-rs = "0.2"
ordered-float = "3.0"
polars = { version = "0.22", features = ["lazy", "list", "decompress"] }
polars-io = "0.22"
rayon = "1.5"
regex = "1.5"
serde = "1.0"
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
string-interner = { version = "0.14", features = ["serde"] }
thiserror = "1.0"

[features]
default = ["taxonomy-serialize-cbor", "taxonomy-serialize-json"]
taxonomy-serialize-json = ["serde_json"]
taxonomy-serialize-cbor = ["serde_cbor"]
