[package]
name = "meteor"
authors = ["Gabriel Riera"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "~4.4.18", features = ["derive", "env"] }
csv = "1.3"
extended-rational = "1.3"
flate2 = "~1.0.30"
ftp = "~3.0.1"
itertools = "0.13"
newick-rs = "0.2"
ordered-float = "4.2"
polars = { version = "~0.41.3", features = ["concat_str", "strings", "lazy", "decompress"] }
progress-streams = "~1.1.0"
quick-xml = { version = "~0.36.1", optional = true }
rayon = "1.10"
regex = "~1.10.5"
serde = "1.0"
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
lending-iterator = "~0.1.7"
string-interner = { version = "0.17", features = ["serde"] }
tempdir = "~0.3.7"
thiserror = "1.0"
reqwest = { version = "~0.12.5", features = ["blocking"] }
tar = "~0.4.41"

[features]
default = ["taxonomy-serialize-cbor", "taxonomy-serialize-json"]
taxonomy-serialize-json = ["serde_json"]
taxonomy-serialize-cbor = ["serde_cbor"]
ppi = ["quick-xml"]
